appId: com.andezdev.test.maestro
tags:
    - webview
---
- launchApp:
    appId: com.andezdev.test.maestro

- runFlow:
    file: subflow/expo-build-accept-dev-client.yaml

- tapOn: Go to webview

- runFlow:
    when:
        visible: "Antes de ir a Google"
    commands:
        - tapOn: "Leer más"

- runFlow:
    when:
        visible: "Aceptar todo"
    commands:
        - tapOn: "Aceptar todo"

- assertVisible: "Tendencias de búsqueda"